--- a/app/composer.json
+++ b/app/composer.json
@@ -5,11 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "php": ">=7.1.3",
+        "laravel/framework": "5.6.*",
         "predis/predis": "^1.1",
-        "laravel/tinker": "~1.0",
-        "barryvdh/laravel-debugbar": "^2.3"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -37,10 +36,6 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
     },
